ecs.tf

resource "aws_ecs_cluster" "ecs_cluster" {
  name = "ecs-cluster"

  tags = {
    Name = "ecs_cluster"
  }
}

data "template_file" "app" {
  template = file("./templates/ecs/app.json.tpl")

  vars = {
    app_name = var.app_name
    app_image = var.app_image
    app_port = var.app_port
    fargate_cpu = var.fargate_cpu
    fargate_memory = var.fargate_memory
  }
}

resource "aws_ecs_task_definition" "app" {
  family = "app_task"
  execution_role_arn = aws_iam_role.ecs_task_execution_role.arn
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu = var.fargate_cpu
  memory = var.fargate_memory
  container_definitions = data.template_file.app.rendered
}

resource "aws_ecs_service" "main" {
  name  = "service"
  cluster = aws_ecs_cluster.ecs_cluster.id
  task_definition = aws_ecs_task_definition.app.arn
  desired_count = var.app_count
  launch_type = "FARGATE"

  network_configuration {
    security_groups = [aws_security_group.ecs_tasks.id]
    subnets = aws_subnet.private.*.id
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.target_group.id
    container_name = "app"
    container_port = var.app_port
  }

  depends_on = [aws_alb_listener.alb_listener, aws_iam_role_policy_attachment.ecs_task_execution_role]

  tags = {
    Name = "nginx-ecs"
  }
}
